Corrected header image whitespace link

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -3,11 +3,12 @@
   font-size: 1rem;
 }
 
-.home img {
+.header-image img {
   max-width: 100px;
   max-height: 100px;
   border-radius: 25%;
   padding: 0.5rem;
+  display: flex;
 }
 
 .home ul {
